# GuidLibrary

./: .gitignore  CMakeLists.txt  README.md
guid/: CMakeLists.txt  Guid.cpp  Guid.h
main/: CMakeLists.txt  main.cpp
